# wordle-challenge

wordle-backend/: Cargo.toml
wordle-backend/src/: handlers.rs  main.rs  middleware.rs  pages.rs  words.rs
wordle-backend/static/: config.js
wordle-backend/templates/: base.html  create.html  game.html
