[package]
name = "wordle-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4"
tokio = { version = "1.0", features = ["full"] }
askama = "0.13.0"
lazy_static = "1.4"
rand = "0.9.0"
parking_lot = "0.12"